# ChemSimulator

./: Makefile  bonds.txt  m1.txt  positions.txt
conf/: bonds.txt  sn1_reaction2.txt
inc/: Atom.h  Bond.h  ElectroNegativityTable.h  ErrorHandler.h  Molecule.h  Vector3.hpp  simulator.hpp
srcs/GUI/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.6876dcd  GUI  Makefile  atomentity.cpp  atomentity.h  atomtablemodel.cpp  atomtablemodel.h  bondentity.cpp  bondentity.h  bondtablemodel.cpp  bondtablemodel.h  class_diagram.qmodel  cmake_install.cmake  datamanager.cpp  datamanager.h  elements.h  graphicsview.cpp  graphicsview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moleculeentity.cpp  moleculeentity.h  moleculelistmodel.cpp  moleculelistmodel.h  orbitcameracontroller.cpp  orbitcameracontroller.h  qtcsettings.cmake
srcs/GUI/.cmake/api/v1/reply/: cache-v2-b127fd23f3de8ba2ae3c.json  cmakeFiles-v1-b12dc094aa4c869acdaa.json  cmakeFiles-v1-c32c392d2da37114ab83.json  codemodel-v2-09d4edbf8f61742c4a18.json  codemodel-v2-b42fe69de3515c443084.json  codemodel-v2-e15d5574d9717cd9d7c5.json  codemodel-v2-ff5c24dace5107e2e7e2.json  directory-.-159fedfe46b3d5da8fcd.json  directory-.-746126851b7de4602728.json  directory-.-8cd4af38c4992ca3d5cb.json  directory-.-a40c58356ba4d343baca.json  index-2024-04-19T20-31-52-0806.json  index-2024-05-04T11-53-53-0377.json  index-2024-05-05T18-16-12-0419.json  index-2024-05-08T09-49-46-0263.json  target-GUI-1ea44479a43c636667fd.json  target-GUI-3f73bea5d94990cc5b0a.json  target-GUI-76088a8b9caa377ae343.json  target-GUI-b446da56e80e735c266e.json  target-GUI_autogen-54584d930e671f88b8bf.json
srcs/GUI/GUI_autogen/: moc_predefs.h  mocs_compilation.cpp
srcs/GUI/GUI_autogen/EWIEGA46WW/: moc_atomentity.cpp  moc_atomentity.cpp.d  moc_atomtablemodel.cpp  moc_atomtablemodel.cpp.d  moc_bondentity.cpp  moc_bondentity.cpp.d  moc_bondtablemodel.cpp  moc_bondtablemodel.cpp.d  moc_datamanager.cpp  moc_datamanager.cpp.d  moc_graphicsview.cpp  moc_graphicsview.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_moleculeentity.cpp  moc_moleculeentity.cpp.d  moc_moleculelistmodel.cpp  moc_moleculelistmodel.cpp.d  moc_orbitcameracontroller.cpp  moc_orbitcameracontroller.cpp.d
srcs/GUI/GUI_autogen/include/: ui_mainwindow.h
srcs/GUI/lib/: qt3dgizmo.ilk
srcs/backend/: Bond.cpp  Molecule.cpp  Vector3.cpp  algorithms.cpp  main.cpp  residue.txt  sim.cpp
srcs/backend/Rendering/: Renderer.py
temp/: mol.cpp  molecule.txt  residue.cpp  residue.txt
